--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ instagram: https://www.instagram.com/noble_whiskers/
 linkedin: https://www.linkedin.com/in/ryanwunderwood/
 dribbble: https://dribbble.com/ryanunderwood
 
-featured_image: https://s3.us-east-2.wasabisys.com/takenotes/personal/site_featured.png
-favicon: https://s3.us-east-2.wasabisys.com/takenotes/personal/favicon.png
+featured_image: /assets/media/featured-images/Takenotes-Featured-Image.jpg
+favicon: /assets/media/featured-images/favicon.png
 
 google_tag: UA-112100017-1
 
